[package]
name = "liquidizers-src"
version = "0.1.0+1.6.0"
authors = ["empire-penguin <gsroberts@ucsd.edu>"]
edition = "2021"
license = "MIT"
description = """
Source code and logic to build liquid-dsp from source
"""
repository = "https://github.com/empire-penguin/liquidizers-src"
readme = "README.md"
keywords = ["liquid-dsp", "dsp"]

# [workspace]
# members = ["testcrate"]

[dependencies]
cc = { version = "1", features = ["parallel"] }

[dev-dependencies]
